# contract

./: .clang-format  .clangd  .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  contract.h  prototype.cpp  wscript
.github/workflows/: ci.yml
cmake/: Deps.cmake  contractConfig.cmake.in  deps-test.cmake  deps.cmake  genconfig.cmake  install.cmake  target_options.cmake  toolchain-gcc.cmake
include/: contract.h  contract.hpp  contract1.h  contract_inl.h
include/contract/: contract.hpp  undef.hpp
include/contract/detail/: contract_imp.hpp  version.hpp  version.hpp.in
include/detail/: contract_imp.hpp  version.hpp
src/: contract.cpp
test/: CMakeLists.txt  classcontract.cpp  classcontract.t.cpp  contract_error.hpp  ctorcontract.cpp  ctorcontract.t.cpp  derivedcontract.cpp  derivedcontract.t.cpp  disableinvariants.cpp  disableinvariants.t.cpp  disablepostconditions.cpp  disablepostconditions.t.cpp  disablepreconditions.cpp  disablepreconditions.t.cpp  dtorcontract.cpp  dtorcontract.t.cpp  examples.cpp  examples.t.cpp  funcontract.cpp  funcontract.t.cpp  loopcontract.cpp  loopcontract.t.cpp  main.cpp  methcontract.cpp  methcontract.t.cpp  usage.cpp  usage1.cpp  violationhandler.cpp  violationhandler.t.cpp
tools/: boost.py
